# LLVM-Obfuscator

./: .gitignore  CMakeLists.txt  GETTING-STARTED.md  GITHUB-ACTIVE.md  GITHUB-SETUP.md  PHASE-1-COMPLETION-REPORT.md  PHASE-1-TODOS-COMPLETE.md  PHASE-2-NEXT-STEPS.md  PHASE1-TO-PHASE2-HANDOFF.md  README-PROJECT-STATUS.md  README.md  START-IMPLEMENTATION.md
include/obfuscator/: Config.h  Metrics.h  PassManager.h  Passes.h  Utils.h
src/analysis/: CFGAnalyzer.cpp  CMakeLists.txt  ComplexityAnalyzer.cpp
src/core/: CMakeLists.txt  ConfigParser.cpp  Logger.cpp  MetricsCollector.cpp  PassManager.cpp  Utils.cpp
src/passes/: BogusControlFlow.cpp  CMakeLists.txt  ControlFlowFlattening.cpp  DeadCodeInsertion.cpp  FunctionSplitting.cpp  InstructionSubstitution.cpp  StringEncryption.cpp
tests/benchmarks/: StringEncryption.bench
tests/fixtures/simple/: arithmetic.c
tests/integration/: StringEncryptionIntegration.cpp
tests/unit/: StringEncryptionTest.cpp
